--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 I worked on mobile, 2D, and 3D games, including leading the development of a multiplayer Trading Card Game with Photon. I’m passionate about writing efficient, maintainable code and helping teams stay organized and agile, especially through SCRUM-based workflows.
                 <br><br>
                 While my focus is on programming, I also bring a creative edge: I have a experience in visual design and can create simple 2D and 3D assets when needed.<br>
-                Whether you're looking for a <b>Technical Designer</b>, a reliable <b>team lead</b>, or a <b>Programmer</b> with an eye for gameplay feel, I'm <b>your</b> match.
+                Whether you're looking for a <b>Technical Designer</b>, a reliable <b>Team Lead</b>, or a <b>Programmer</b> with an eye for gameplay feel, I'm <b>your</b> match.
               Game Jam projects: <a href="https://sunfiragames.itch.io/" target="_blank">https://sunfiragames.itch.io/</a> 
             </div>
         </div>
