--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     
                     <img  class="divider_s" src="./Images/Decorative/Divider.png"> </img>
            
-                   <p class="lead">Focused on developing custom editor tools, refactoring and restructuring the existing codebase, and implementing the foundational systems for a casino wheel game.<br>
+                   <p class="lead">
                        <li> Focused on developing custom editor tools.
                        </li>
                        <li> Refactoring and restructuring the existing codebase.
